Fixed NullableBoolean align issue

--- a/src/WebComponents/QueryGrid/query-grid-cells.less
+++ b/src/WebComponents/QueryGrid/query-grid-cells.less
@@ -2,6 +2,8 @@
 
 .cell {
 	&[data-vi-column-type='Boolean'], &[data-vi-column-type='NullableBoolean'], &[data-vi-column-type='YesNo'] {
+        text-align: center;
+
         vi-resource.unchecked {
             #check {
                 display: none;
